changed formatting again to fix squished text

--- a/css/screen.css
+++ b/css/screen.css
@@ -56,10 +56,9 @@ img#slider {
 }
 
 #mission {
-  font-family: Arial;
   text-align: center;
-  margin-left: 7em;
-  margin-right: 7em;
+  margin-left: 2em;
+  margin-right: 2em;
   font-size: 1.5em;
 }
 
@@ -169,10 +168,10 @@ input[type=tel]:focus {
 
 #intro {
   color: white;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
   padding-bottom: 1em;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 #thoughts {
@@ -249,40 +248,40 @@ img#slider4 {
 #home1 {
   text-align: center;
   color: white;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
   margin-bottom: 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.3;
 }
 
 #home3 {
   text-align: center;
   color: white;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
   margin-bottom: 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.3;
 }
 
 #home2 {
   text-align: center;
   color: white;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
   margin-bottom: 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.3;
 }
 
 #home4 {
   text-align: center;
   color: white;
-  margin-left: 5em;
-  margin-right: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
   margin-bottom: 1em;
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.3;
 }
 
@@ -377,7 +376,6 @@ img#slider4 {
     width: 10%;
   }
   #mission {
-    font-family: Arial;
     text-align: center;
     margin-left: 20em;
     margin-right: 20em;
@@ -496,7 +494,7 @@ img#slider4 {
   }
   #interest,
   #inter {
-    font-size: 1em;
+    font-size: 1.5em;
   }
   #in {
     height: 100px;
@@ -578,9 +576,12 @@ img#slider4 {
   }
   #inter{
 	  margin-top: 2em;
-	  margin-bottom: 2em;
+    margin-bottom: 2em;
   }
   #mission{
-	  margin-bottom: 2em;
+    margin-left: 3em;
+    margin-right: 3em;
+    font-size: 2em;
+    margin-bottom: 2em;
   }
 }
